--- a/portafolioSvelte/public/index.html
+++ b/portafolioSvelte/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Ariel Macario</title>
+	<title>Ariel Macario | Portafolio</title>
 
 	<link rel='icon' type='image/png' href='./images/logoPng.png'>
 	<link rel='stylesheet' href='/global.css'>
