--- a/portafolioSvelte/public/index.html
+++ b/portafolioSvelte/public/index.html
@@ -7,11 +7,11 @@
 	<title>Ariel Macario | Portafolio</title>
 
 	<link rel='icon' type='image/png' href='./images/logoPng.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='stylesheet' href='./global.css'>
+	<link rel='stylesheet' href='./build/bundle.css'>
 
 	
-	<script defer src='/build/bundle.js'></script>
+	<script defer src='./build/bundle.js'></script>
 </head>
 
 <body>
